--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -258,7 +258,7 @@ div#header_search ul.link-tabs li.off a {
 	padding : 0.1em .5em .2em .5em;
 }
 
-div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search,div#checkin_search,div#suggestions_search {
+div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search,div#checkin_search,div#suggestions_search,div#roadtype_search {
 	border : 0;
 	border-bottom : 1px solid #FF9900;
 	padding : 0 0 .2em 0;
@@ -427,4 +427,41 @@ dt {
 dd {
 	padding : .2em;
 	text-indent : 1.5em;
+}
+
+div#toolbar {
+	background-color : #F3F3F3;
+}
+
+ul.toolbar {
+}
+
+ul.toolbar li {
+	display : inline;
+	float : left;
+	list-style : none;
+}
+
+ul.toolbar li a {
+	background-color : #F3F3F3;
+	border : 1px solid #F3F3F3;
+	display : block;
+	margin : 3px;
+	padding : 3px;
+	text-decoration : none;
+}
+
+ul.toolbar li a:hover {
+	background-color : #FFFFCC;
+	border-top : 1px solid #FFFFFF;
+	border-left : 1px solid #FFFFFF;
+	border-bottom : 1px solid #BCBCBC;
+	border-right : 1px solid #BCBCBC;
+}
+
+ul.toolbar li:last-child a:hover {
+}
+
+ul.toolbar ul {
+	display : none;
 }
