--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tmpl
@@ -30,6 +30,7 @@
 		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Patrons checking out the most</a></li>
 		<li><a href="/cgi-bin/koha/reports/cat_issues_top.pl">Items checked out the most</a></li>
 	</ul>
+	
 	<h2>Inactive</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/borrowers_out.pl">Patrons who haven't checked out</a></li>
@@ -39,8 +40,7 @@
 
 	<h2>Other</h2>
 	<ul>
-		<dt><a href="/cgi-bin/koha/reports/itemslost.pl">Items lost</a></dt>
-    	<dd>Show lost items</dd>
+		<li><a href="/cgi-bin/koha/reports/itemslost.pl">Items lost</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=itemtypes">Catalogue by itemtype</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Checkouts by patron category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
