More efforts with toolbars, nothing solved. Also corrections, and modifications to resident search to place focus on displayed form field.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -312,6 +312,11 @@ div#header_search .tip {
 	color : Gray;
 }
 
+.ex {
+	font-family : "Courier New", Courier, fixed-width;
+	font-weight : bold;
+}
+
 /* ClickMenu Overrides */
 
 div.cmDiv
@@ -453,10 +458,6 @@ ul.toolbar li a {
 
 ul.toolbar li a:hover {
 	background-color : #FFFFCC;
-	border-top : 1px solid #FFFFFF;
-	border-left : 1px solid #FFFFFF;
-	border-bottom : 1px solid #BCBCBC;
-	border-right : 1px solid #BCBCBC;
 }
 
 ul.toolbar li:last-child a:hover {
