--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
@@ -52,6 +52,9 @@
             }
         }
     }
+	 $(document).ready(function() {
+ 		$('#patronlists').tabs();
+	 });
 //]]>
 </script>
 
@@ -264,7 +267,7 @@
 
 <!-- TMPL_IF NAME="message" -->
 <p>
-No patron matched <!-- TMPL_VAR name="message" -->
+No patron matched <span class="ex"><!-- TMPL_VAR name="message" --></span>
 <a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=A" />Add adult</a>
 <a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=C" />Add child</a>  
 </p>
@@ -290,7 +293,7 @@ No patron matched <!-- TMPL_VAR name="message" -->
     Patron not found?
     <a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=A" />Add adult</a>
     <a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=C" />Add child</a>
-    or <a href="JavaScript:back();">try another search</a>
+    or <a href="/cgi-bin/koha/circ/circulation.pl">try another search</a>
     </p>
 </fieldset>
 </form>
@@ -692,83 +695,25 @@ No patron matched <!-- TMPL_VAR name="message" -->
 
 <!-- /TMPL_IF -->
 
-<div id="tabs">
+<div id="patronlists">
     <h2><!-- TMPL_VAR NAME="firstname"--> <!-- TMPL_VAR NAME="surname"--> (<!-- TMPL_VAR NAME="cardnumber"-->) has</h2>
-    <!-- TMPL_IF NAME="countreserv"-->
-        <a href="javascript:active(0)" class="tab_inactive" id="link0">
-            <!--TMPL_VAR NAME="countreserv"--> reserve(s)
-        </a>
+
+<ul>   
+<li>    <!--TMPL_IF NAME="issuecount"-->
+            <a href="/cgi-bin/koha/circ/circulation.pl#checkouts"><!-- TMPL_VAR NAME="issuecount"--> issue(s)</a>
     <!-- TMPL_ELSE -->
-        <a href="#" class="tab_inactive">
-            0 reserves
-        </a>
-    <!-- /TMPL_IF -->
-    
-    <!--TMPL_IF NAME="issuecount"-->
-        <a href="javascript:active(1)" class="tab_inactive" id="link1">
-            <!-- TMPL_VAR NAME="issuecount"--> issue(s)
-        </a>
+            <a href="/cgi-bin/koha/circ/circulation.pl#checkouts">0 issues</a>
+    <!-- /TMPL_IF --></li>
+<li><!-- TMPL_IF NAME="countreserv"-->
+            <a href="/cgi-bin/koha/circ/circulation.pl#reserves"><!--TMPL_VAR NAME="countreserv"--> reserve(s)</a>
     <!-- TMPL_ELSE -->
-        <a href="#" class="tab_inactive">
-            0 issue(s)
-        </a>
-    <!-- /TMPL_IF -->
-</div>
-
-<!-- TMPL_IF NAME="reservloop" -->
-<div id="0XX" class="content_hidden">
-    <table>
-        <tr>
-            <th>Reserve date</th>
-            <th>Barcode</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Localisation</th>
-        </tr>
-        <!-- TMPL_LOOP NAME="reservloop" -->
-        <tr class="<!-- TMPL_VAR NAME="color" -->">
-                    <td>
-                        <!-- TMPL_VAR NAME="reservedate" -->
-                    </td>
-                    <td>
-                        <!-- TMPL_IF name="barcodereserv" -->
-                        <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&amp;type=intra" onclick="openWindow(this, 'Item', 480, 640); return false;"><!-- TMPL_VAR NAME="barcodereserv" --></a>
-                        <!-- /TMPL_IF -->
-                        <!-- TMPL_IF NAME="waitingposition" -->
-                        Hold priority :
-                        <b> <!-- TMPL_VAR NAME="waitingposition" --> </b>
-                        <!-- /TMPL_IF -->
-                    </td>
-                    <td>
-                        <!-- TMPL_VAR NAME="title" --> (<b> <!-- TMPL_VAR NAME="itemtype" --> </b>) 
-
-                        <!-- TMPL_IF name="waiting" -->
-                        <br />
-                        <i>This hold is available</i>
-                        <!-- /TMPL_IF -->
-                        <!-- TMPL_IF name="transfered" -->
-                        <br />
-                        <i>This hold has been transfered from library : 
-                        <!-- TMPL_VAR NAME="frombranch" --> the : <!-- TMPL_VAR NAME="datesent" --> </i>
-                        <!-- /TMPL_IF -->
-
-                        <!-- TMPL_IF name="nottransfered" -->
-                        <br />
-                        <i>This hold hasn't been transfered yet from library : <!-- TMPL_VAR NAME="nottransferedby" --></i>
-                        <!-- /TMPL_IF -->
-                    </td>
-                    <td><!-- TMPL_VAR NAME="author" --></td>
-                    <td><!-- TMPL_VAR NAME="itemcallnumber" --></td>
-            </tr>
-        <!-- /TMPL_LOOP -->
-    </table>
-</div>
-<!-- /TMPL_IF --> <!-- reservesloop -->
-<!-- /TMPL_IF --> <!-- borrowernumber -->
+            <a href="/cgi-bin/koha/circ/circulation.pl#reserves">0 reserves</a>
+    <!-- /TMPL_IF --></li>
+ 
+</ul>
 
 <!-- SUMMARY : TODAY & PREVIOUS ISSUES -->
-<!-- TMPL_IF NAME="borrowernumber" -->
-<div id="1XX">
+<div id="checkouts">
     <form action="/cgi-bin/koha/reserve/renewscript.pl" method="post">
     <p>
     <span class="click" onclick="window.open('/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;print=page')">Print Page</span>
@@ -878,7 +823,59 @@ No patron matched <!-- TMPL_VAR name="message" -->
     </div>
 </form>
 </div>
+
+<!-- TMPL_IF NAME="reservloop" -->
+<div id="reserves">
+    <table>
+        <tr>
+            <th>Reserve date</th>
+            <th>Barcode</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Localisation</th>
+        </tr>
+        <!-- TMPL_LOOP NAME="reservloop" -->
+        <tr class="<!-- TMPL_VAR NAME="color" -->">
+                    <td>
+                        <!-- TMPL_VAR NAME="reservedate" -->
+                    </td>
+                    <td>
+                        <!-- TMPL_IF name="barcodereserv" -->
+                        <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&amp;type=intra" onclick="openWindow(this, 'Item', 480, 640); return false;"><!-- TMPL_VAR NAME="barcodereserv" --></a>
+                        <!-- /TMPL_IF -->
+                        <!-- TMPL_IF NAME="waitingposition" -->
+                        Hold priority :
+                        <b> <!-- TMPL_VAR NAME="waitingposition" --> </b>
+                        <!-- /TMPL_IF -->
+                    </td>
+                    <td>
+                        <!-- TMPL_VAR NAME="title" --> (<b> <!-- TMPL_VAR NAME="itemtype" --> </b>) 
+
+                        <!-- TMPL_IF name="waiting" -->
+                        <br />
+                        <i>This hold is available</i>
+                        <!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="transfered" -->
+                        <br />
+                        <i>This hold has been transfered from library : 
+                        <!-- TMPL_VAR NAME="frombranch" --> the : <!-- TMPL_VAR NAME="datesent" --> </i>
+                        <!-- /TMPL_IF -->
+
+                        <!-- TMPL_IF name="nottransfered" -->
+                        <br />
+                        <i>This hold hasn't been transfered yet from library : <!-- TMPL_VAR NAME="nottransferedby" --></i>
+                        <!-- /TMPL_IF -->
+                    </td>
+                    <td><!-- TMPL_VAR NAME="author" --></td>
+                    <td><!-- TMPL_VAR NAME="itemcallnumber" --></td>
+            </tr>
+        <!-- /TMPL_LOOP -->
+    </table>
+</div>
+<!-- /TMPL_IF --> <!-- reservesloop -->
+
 <!-- /TMPL_IF --> <!-- borrowernumber -->
+</div>
 <!--/TMPL_IF -->
 
 
