--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
@@ -2,6 +2,7 @@
 <title>Koha &rsaquo; Patrons &rsaquo; Patron Details for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
+//<![CDATA[
 function confirm_deletion() {
     var is_confirmed = window.confirm('Click OK to confirm deletion');
     var borrowernumbervalue=document.form.borrowernumber.value; 
@@ -15,9 +16,10 @@ function confirm_reregistration() {
     var is_confirmed = window.confirm('Click OK to confirm renewal');
     var borrowernumbervalue1=document.form.borrowernumber.value;
     if (is_confirmed) {
-    window.location='/cgi-bin/koha/members/moremember.pl?reregistration=y&amp;borrowernumber='+borrowernumbervalue1+'';
+    window.location='/cgi-bin/koha/members/moremember.pl?reregistration=y&borrowernumber='+borrowernumbervalue1+'';
     }
 }
+//]]>
 </script>
 </head>
 <body>
@@ -40,6 +42,9 @@ function confirm_reregistration() {
 <input type="hidden" name="reregistration" value="<!-- TMPL_VAR NAME="reregistration"-->" /> 
 <input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
 </form>
+
+<!-- TMPL_INCLUDE NAME="circ-toolbar.inc" -->
+
 <div id="action">
     
 	<div class="edit">
@@ -68,7 +73,7 @@ function confirm_reregistration() {
     <div class="view">
 <ul>
 	<li>        <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Pay fines</a> </li>
-	<li>        <a href="javascript:confirm_reregistration();" onclick="document.form.value='y'" class="gest_borro_op">Renew</a></li>
+	<li>        <a href="#" onclick="confirm_reregistration(); document.form.value='y';">Renew</a></li>
 </ul>
     </div>
 </div>
