--- a/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/shelves.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/virtualshelves/shelves.tmpl
@@ -1,8 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; <!-- TMPL_IF NAME="viewshelf" -->Virtual Shelves &rsaquo; Contents of <!-- TMPL_VAR NAME="shelfname" --><!-- TMPL_ELSE -->Virtual Shelves<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
 <script type="text/javascript">
-	function confirmDelete(s){
+//<![CDATA[	function confirmDelete(s){
 		if (window.confirm(s))
 			return true;
 		return false;
@@ -37,7 +38,7 @@
 		}
 		return true;
 	}
-	
+	//]]>
 </script>
 </head>
 <body>
@@ -63,10 +64,10 @@
 <h3>Contents of <i><!-- TMPL_VAR NAME="shelfname" --></i></h3>
 
 <form class="inline" action="/cgi-bin/koha/virtualshelves/shelves.pl" method="post" name="mainform">
-    <!-- TMPL_IF NAME="itemsloop" -->
-    <table>
         <input type="hidden" name="viewshelf" value="<!-- TMPL_VAR NAME="shelfnumber" -->" />
         <input type="hidden" name="modifyshelfcontents" value="1" />
+    <!-- TMPL_IF NAME="itemsloop" -->
+    <table>
             <tr>
                 <th>
                     <a href="javascript:CheckAll();">
@@ -114,19 +115,13 @@
     <!-- TMPL_UNLESS NAME="itemsloop" -->
         <input type="hidden" name="DEL-<!-- TMPL_VAR NAME="shelfnumber" -->" />
         <input type="hidden" name="shelves" value="1" />
-        <input type="submit" class="icon delete"
-               value="Delete this shelf"
-               onclick="return confirmDelete('Are you sure you want to delete this shelf?')" />
+        <input type="submit" value="Delete this shelf" onclick="return confirmDelete('Are you sure you want to delete this shelf?')" />
         <!-- /TMPL_UNLESS -->
         <!-- /TMPL_IF -->
     <!-- TMPL_IF name="manageshelf" -->
         <!-- TMPL_IF NAME="itemsloop" -->
             <b>With selected items :</b>
-            <input type="submit" "Remove"
-                   class="icon delete"
-                   onclick="return confirmDelete('Are you sure you want to remove these items from the shelf?')"
-                   style="display:inline;"
-                   />
+            <input type="submit" value="Remove" onclick="return confirmDelete('Are you sure you want to remove these items from the shelf?')" style="display:inline;" />
         <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
 </form>
