Minor changes to header and circ-toolbar. Beginning work on memberentry form layout CSS (unfinished)
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -319,12 +319,19 @@ div#header_search .tip {
 
 /* ClickMenu Overrides */
 
+ul#toplevelmenu li {
+	display : inline;
+	list-style: none;
+}
+
+ul#toplevelmenu li ul {
+}
+
 div.cmDiv
 {
 	border: 0;
 	background-color: #F3F3F3;
 }
-
 
 .clickMenu li.more a {
 	background-image: url("../../img/more-arrow.gif");
@@ -415,7 +422,6 @@ ul.innerBox a {
 }
 
 ul.innerBox {
-	
 	border: 1px solid #E8E8E8;
 }
 
@@ -465,4 +471,11 @@ ul.toolbar li:last-child a:hover {
 
 ul.toolbar ul {
 	display : none;
+}
+
+div.message {
+   border : 1px solid #6699CC;
+	width : 33%;
+	margin : 1em;
+	padding : .5em;
 }
