A couple more tweaks to member entry form. Still unfinished: inline CSS will have to be generalized and moved to external stylesheet. Trying some changes to circ page, including moving patron info into sidebar, consolidating messages and warnings. Also unfinished!
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -17,27 +17,27 @@ form {
 }
 
 h1 {
-	font-size : 182%;
+	font-size : 161.6%;
 	font-weight : bold;
 }
 
 h2 {
-	font-size : 167%;
+	font-size : 146.5%;
 	font-weight : bold;
 }
 
 h3 {
-	font-size : 153.9%;
+	font-size : 131%;
 	font-weight : bold;
 }
 
 h4 {
-	font-size : 138.5%;	
+	font-size : 116%;	
 	font-weight : bold;
 }
 
 h5 {
-	font-size : 123.1%;	
+	font-size : 100%;	
 	font-weight : bold;
 }
 
@@ -478,4 +478,28 @@ div.message {
 	width : 33%;
 	margin : 1em;
 	padding : .5em;
+}
+
+div.patroninfo {
+	margin-bottom : .5em;
+	margin-top : -.5em;
+}
+
+div.patroninfo h5 {
+	background-color : #F5F0CC;
+	border-top :  1px solid #CCCC99;
+	border-left :  1px solid #CCCC99;
+	border-right :  1px solid #CCCC99;
+	margin-bottom : 0;
+	padding-bottom : .5em;
+}
+
+div.patroninfo ul {
+	border : 1px solid #CCCC99;
+	border-top : 0;
+	background-color : #F5F0CC;
+}
+
+div.patroninfo ul li {
+	list-style-type : none;
 }
