2 BUGFIX (1 being unimarc specific) : change in plugin handling
before this commit, the main (usually $a) entry could not be entered by the librarian.
With the new BiblioAddAuthority feature, it's a bad idea : the librarian will
be able to enter a value manually, and the authority will be automatically created on the fly
Thus the small change in addbiblio.pl

This commit also fixes a bug in plugin 4XX (which is unimarc specific) :
"Empty" option did not work properly + API convention fix (biblionumber instead of bibnum)

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_4XX.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_4XX.tmpl
@@ -161,9 +161,9 @@
 					</td>
 					<td>
                       <!--TMPL_IF Name="biblionumber"-->
-						<a href="javascript:jumpfull('/cgi-bin/koha/cataloguing/plugin_launcher.pl?plugin_name=unimarc_field_4XX.pl&index=<!--TMPL_VAR Name="index"-->&bibnum=<!--TMPL_VAR Name="biblionumber"-->&type=intranet&op=fillinput')">Choose</a>
+						<a href="javascript:jumpfull('/cgi-bin/koha/cataloguing/plugin_launcher.pl?plugin_name=unimarc_field_4XX.pl&index=<!--TMPL_VAR Name="index"-->&biblionumber=<!--TMPL_VAR Name="biblionumber"-->&type=intranet&op=fillinput')">Choose</a>
                       <!--TMPL_ELSE-->
-						<a href="javascript:jumpfull('/cgi-bin/koha/cataloguing/plugin_launcher.pl?plugin_name=unimarc_field_4XX.pl&index=<!--TMPL_VAR Name="index"-->&bibnum=<!--TMPL_VAR Name="biblionumber"-->&type=intranet&op=fillinput')">Clear Field</a>
+						<a href="javascript:jumpfull('/cgi-bin/koha/cataloguing/plugin_launcher.pl?plugin_name=unimarc_field_4XX.pl&index=<!--TMPL_VAR Name="index"-->&type=intranet&op=fillinput')">Clear Field</a>
                       <!--/TMPL_IF-->
 					</td>
 				</tr>
